--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         <!-- Hero Section -->
         <header class="hero">
             <div class="profile-wrapper">
-                <img src="Screenshot_2026-01-13_at_1_11_24_PM.png" alt="Tilda Nk" class="profile-image">
+                <img src="profile.png" alt="Tilda Nk" class="profile-image">
             </div>
             <h1 class="hero-name">Tilda Nk</h1>
             <p class="hero-tagline">Turning AI Complexity into Your Superpower</p>
