--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
             </div>
             
             <div class="tools-grid">
-                <a href="https://elevenlabs.io" class="tool-card" target="_blank" rel="noopener">
+                <a href="https://try.elevenlabs.io/at8rra5ssm9s" class="tool-card" target="_blank" rel="noopener">
                     <div class="tool-icon">E</div>
                     <div class="tool-content">
                         <div class="tool-header">
@@ -717,7 +717,7 @@
                     </div>
                 </a>
                 
-                <a href="https://marketingblocks.ai" class="tool-card" target="_blank" rel="noopener">
+                <a href="https://hey.marketingblocks.ai?deal=matilda45" class="tool-card" target="_blank" rel="noopener">
                     <div class="tool-icon">M</div>
                     <div class="tool-content">
                         <div class="tool-header">
